feat(audit-query-service): Complete backend audit dashboard implementation
Implemented 22 missing backend API endpoints for audit dashboards:
- QA Audit Dashboard: 10 endpoints
- Clinical Audit Dashboard: 6 endpoints
- MPI Audit Dashboard: 6 endpoints

## Changes

### QA Audit Service (`QAAuditService.java`)
- Fixed inputContext/outputData mapping (uses inputMetrics and recommendation fields)
- 10 endpoints: review queue, metrics, trends, approve, reject, flag, false positive/negative, detail, export

### Clinical Audit Service (`ClinicalAuditService.java`)
- LocalDateTime to Instant conversion for API compatibility
- 6 endpoints: decisions, metrics, accept, reject, modify, export Excel

### MPI Audit Service (`MPIAuditService.java`)
- MPI merge event tracking and data quality resolution
- 6 endpoints: merge events, metrics, validate, rollback, resolve, export

### Application Configuration (`AuditQueryServiceApplication.java`)
- Excluded authentication auto-configuration to prevent bean conflicts
- Removed authentication from ComponentScan (not needed for gateway trust auth)
- Added ComponentScan filters to exclude authentication services/controllers

### Repository Fix (`ClinicalDecisionRepository.java`)
- Fixed EXTRACT query: Changed from JPQL to native SQL
- Resolved Hibernate Duration type incompatibility with EXTRACT function

### Dependencies (`build.gradle.kts`)
- Added Apache POI 5.2.5 for Excel export support

### Database Schema
- Manually added missing columns to ai_agent_decision_events table:
  - reviewed_at (TIMESTAMP WITH TIME ZONE)
  - reviewed_by (VARCHAR(255))
  - review_status (VARCHAR(50))
  - review_notes (TEXT) - already existed
- Created tenants/users tables in audit_db for entity validation

## Deployment Status
✅ Service successfully deployed and healthy on port 8088
✅ All 22 endpoints available via /api/v1/audit/* routes
✅ Hibernate schema validation passing
✅ No bean conflicts

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>